--- a/lab/lab.vcxproj
+++ b/lab/lab.vcxproj
@@ -128,10 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="lab.cpp" />
-    <ClCompile Include="LogCon.cpp" />
+    <ClCompile Include="Price.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LogCon.h" />
+    <ClInclude Include="Price.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="prices.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
