--- a/lab/lab.vcxproj.filters
+++ b/lab/lab.vcxproj.filters
@@ -18,13 +18,16 @@
     <ClCompile Include="lab.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LogCon.cpp">
+    <ClCompile Include="Price.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LogCon.h">
+    <ClInclude Include="Price.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="prices.txt" />
   </ItemGroup>
 </Project>
